--- a/src/main/resources/neoforge-1.20.6/mappings/attribute.yaml
+++ b/src/main/resources/neoforge-1.20.6/mappings/attribute.yaml
@@ -17,9 +17,8 @@ MAX_HEALTH: MAX_HEALTH
 MOVEMENT_SPEED: MOVEMENT_SPEED
 SPAWN_REIFORCEMENTS_CHANCE: SPAWN_REINFORCEMENTS_CHANCE
 FORGE:SWIM_SPEED: FORGE:SWIM_SPEED
-FORGE:ENTITY_GRAVITY: FORGE:ENTITY_GRAVITY
+FORGE:ENTITY_GRAVITY: GRAVITY
 FORGE:NAMETAG_DISTANCE: FORGE:NAMETAG_DISTANCE
-FORGE:STEP_HEIGHT_ADDITION: FORGE:STEP_HEIGHT_ADDITION
-FORGE:ATTACK_RANGE: FORGE:ATTACK_RANGE
-FORGE:BLOCK_REACH: FORGE:BLOCK_REACH
-FORGE:ENTITY_REACH: FORGE:ENTITY_REACH
+FORGE:STEP_HEIGHT_ADDITION: STEP_HEIGHT
+FORGE:BLOCK_REACH: BLOCK_INTERACTION_RANGE
+FORGE:ENTITY_REACH: ENTITY_INTERACTION_RANGE
